--- a/config.json
+++ b/config.json
@@ -2,8 +2,8 @@
     "app_id": "com.mcservices.thebritishdiction",
     "appname": "TheBritishDiction Mobile",
     "desktopappname": "TheBritishDiction Desktop",
-    "versioncode": 1000,
-    "versionname": "1.0.0",
+    "versioncode": 1001,
+    "versionname": "1.0.1",
     "cache_update_frequency_usually": 420000,
     "cache_update_frequency_often": 1200000,
     "cache_update_frequency_sometimes": 3600000,
@@ -58,7 +58,7 @@
     "wsextservice": "local_mobile",
     "demo_sites": {},
     "customurlscheme": "moodlemobile",
-    "siteurl": "https:\/\/thebritishdiction.com\/lmsportal",
+    "siteurl": "https:\/\/thebritishdiction.com",
     "sitename": "ThwBritishDiction",
     "multisitesdisplay": "",
     "skipssoconfirmation": false,
